Force background color on body, to avoid gaps before footer.

--- a/local.css
+++ b/local.css
@@ -103,6 +103,7 @@ body {
     padding: 0;
     font-family: helvetica,arial,sans-serif;
     font-size: 100%;
+    background-color: #eeeeee;
 }
 
 .page {
